--- a/code/blockchain/ethereum/Dockerfile.dapp
+++ b/code/blockchain/ethereum/Dockerfile.dapp
@@ -4,10 +4,12 @@ WORKDIR /app
 
 
 # RUN npm install js-yaml
-RUN npm install web3 dotenv express body-parser axios @truffle/hdwallet-provider swagger-ui-express @aws-sdk/client-dynamodb @aws-sdk/lib-dynamodb @aws-sdk/client-s3 date-fns
+RUN npm install dotenv express body-parser axios swagger-ui-express date-fns
+RUN npm install web3 @truffle/hdwallet-provider
+RUN npm install @aws-sdk/client-dynamodb @aws-sdk/lib-dynamodb @aws-sdk/client-s3
 RUN npm install -g truffle
 
-COPY ./js/dynamo-repository.js ./js/utils.js ./js/contract_service.js ./js/blockchain_service.js ./js/expenses_service.js /app
+COPY ./js/dynamo-repository.js ./js/s3-repository.js ./js/utils.js ./js/contract-service.js ./js/blockchain-service.js ./js/expenses-service.js /app
 COPY ./truffle/truffle-config.js /app/truffle-config.js
 COPY ./dapp/ /app
 
